tdf#97398: Toggle deck/panel visibility individually for each app

Change in visibility of a shared deck ('any, any, ...') or panel
made in 1 app must not affect its visibility in the remaining apps

Change-Id: I78472ce078409edec796ef649349df4bda62a709
Reviewed-on: https://gerrit.libreoffice.org/23432
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>